--- a/HelloMediatr.Api/HelloMediatr.Api.csproj
+++ b/HelloMediatr.Api/HelloMediatr.Api.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 
