--- a/HelloMediatr.Api/HelloMediatr.Api.csproj
+++ b/HelloMediatr.Api/HelloMediatr.Api.csproj
@@ -10,10 +10,13 @@
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HelloMediatr.Application\HelloMediatr.Application.csproj" />
     <ProjectReference Include="..\HelloMediatr.Domain\HelloMediatr.Domain.csproj" />
+    <ProjectReference Include="..\HelloMediatr.Infrastructure\HelloMediatr.Infrastructure.csproj" />
   </ItemGroup>
 
 
